2011-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mount.c (argp_parser): Accept relative pathes.
	* util/grub-fstest.c (argp_parser): Likewise.

2011-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Plan9 support.

	* Makefile.util.def (libgrubmods): Add
	grub-core/partmap/plan.c.
	* docs/grub.texi: Notice Plan9 support.
	* grub-core/Makefile.core.def (plan9): New module.
	(part_plan): Likewise.
	* grub-core/loader/i386/pc/plan9.c: New file.
	* grub-core/partmap/plan.c: Likewise.
	* include/grub/msdos_partition.h (GRUB_PC_PARTITION_TYPE_PLAN9): New
	define.
	(GRUB_PC_PARTITION_TYPE_LINUX_SWAP): Likewise.
	* include/grub/mm.h (grub_extend_alloc): New inline function.

2011-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Make Reed-Solomon faster by using power of generator representation of
	GF(256)*.

	* grub-core/lib/reed_solomon.c (grub_uint16_t) [TEST]: Removed.
	(gf_double_t): Likewise.
	(gf_invert): Removed.
	(gf_powx): New array.
	(gf_powx_inv): Likewise.
	(scratch): Move higher.
	(gf_reduce): Removed.
	(gf_mul): Use powx.
	(gf_invert): Likewise.
	(init_inverts): Replaced with ...
	(init_powx): ...this. All users updated.
	(pol_evaluate): Replace multiplications with additions.
	(rs_encode): Likewise.
	(gauss_eliminate): Call gf_invert.
	(grub_reed_solomon_add_redundancy): Call init_powx.
	(grub_reed_solomon_recover): Call init_powx unconditionally.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/gpt.c (gpt_partition_map_embed): Fix spelling.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/gpt.c (gpt_partition_map_embed): Restore
	disk->partiton for safety.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_get_grub_dev):
	Fix a memory leak.
	(grub_util_biosdisk_get_grub_dev): Add a useful debug info.

2011-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (find_system_device): Fix a memory leak.
